# tinto

./: .gitignore  CMakeLists.txt  README.md  build_libs.sh  build_tinto.sh
android/Tutorial/app/: build.gradle  proguard-rules.pro
android/Tutorial/app/src/main/: AndroidManifest.xml
android/Tutorial/app/src/main/jni/: Android.mk  Application.mk  SDL2  SDL2_image  SDL2_mixer  SDL2_ttf  libmikmod  libwebp  smpeg
include/tinto/: tinto.h
include/tinto/anim/: Animation.h  AnimationDelay.h  ParallelAnimation.h  SerialAnimation.h
include/tinto/audio/: Audio.h  Music.h  Sound.h  SoundManager.h
include/tinto/easing/: Back.h  Bounce.h  Circ.h  Cubic.h  Easing.h  Elastic.h  Expo.h  Linear.h  Quad.h  Quart.h  Quint.h  Sine.h
include/tinto/engine/: GameEngine.h  GameTime.h  Input.h  Metrics.h
include/tinto/graphics/: Button.h  Color.h  Dialog.h  Drawable.h  FpsText.h  Node.h  NodeWrapper.h  Rectangle.h  Sprite.h  SpriteSheet.h  StateNode.h  Text.h
include/tinto/scenes/: Scene.h  SceneManager.h
include/tinto/utils/: Collectable.h  Geometry.h  ObjectCollector.h  Observable.h  Thread.h
ios/Tinto/Tinto.xcodeproj/: project.pbxproj
ios/Tinto/Tinto.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
ios/TintoTutorial/TintoTutorial/: main.cpp
ios/TintoTutorial/TintoTutorial.xcodeproj/: project.pbxproj
ios/TintoTutorial/TintoTutorial.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
ios/WheelOfFortune/: WheelOfFortune-Info.plist
ios/WheelOfFortune/WheelOfFortune.xcodeproj/: project.pbxproj
ios/WheelOfFortune/WheelOfFortune.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
ios/WheelOfFortune/WheelOfFortune.xcodeproj/project.xcworkspace/xcshareddata/: WheelOfFortune.xcscmblueprint
ios/WheelOfFortune/WheelOfFortune/Images.xcassets/AppIcon.appiconset/: Contents.json
src/anim/: Animation.cpp  AnimationDelay.cpp  ParallelAnimation.cpp  SerialAnimation.cpp
src/audio/: Audio.cpp  Music.cpp  Sound.cpp  SoundManager.cpp
src/easing/: Back.cpp  Bounce.cpp  Circ.cpp  Cubic.cpp  Elastic.cpp  Expo.cpp  Linear.cpp  Quad.cpp  Quart.cpp  Quint.cpp  Sine.cpp
src/engine/: GameEngine.cpp  GameTime.cpp  Input.cpp  Metrics.cpp
src/graphics/: Button.cpp  Color.cpp  Dialog.cpp  Drawable.cpp  FpsText.cpp  Node.cpp  NodeWrapper.cpp  Rectangle.cpp  Sprite.cpp  SpriteSheet.cpp  StateNode.cpp  Text.cpp
src/scenes/: Scene.cpp  SceneManager.cpp
src/utils/: Collectable.cpp  Geometry.cpp  ObjectCollector.cpp  Observable.cpp  Thread.cpp
tutorial/: CMakeLists.txt
tutorial/src/: main.cpp
(+30 files in other folders)
